syntax = "proto3";

package edu.usfca.protobuf;

import "common.proto";
import "event.proto";

message AppData {
  // Do NOT modify this. Do NOT add any more fields.
  string bundle = 1;
  
  int64 num_purchasers = 2;
  int64 total_amount = 3;
  
  map<int32, int32> user_count_per_exchange = 4;
}

message PredictionData {
  // Do NOT modify this. Do NOT add any more fields.
  DeviceId id = 1;
  
  // prediction must be between 0-9.
  int32 prediction = 2;
  double score = 3;
}